fix: :bug: add overflow:hidden to body for menu support

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
 * { 
     -webkit-tap-highlight-color: transparent
 }
+
+body {
+    overflow: hidden;
+}
